<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A Simple Contacts Application</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="create_contact">New Contact</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="display_name">Display Name</string>
    <string name="first_name">First Name</string>
    <string name="home_phone">Home Phone</string>
    <string name="birthday">Birthday</string>
    <string name="work_phone">Work Phone</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="last_name">Last Name</string>
    <string name="edit">Edit</string>

</resources>
