<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:scrollbarStyle="outsideInset"
    android:orientation="vertical" 
    tools:context=".EditActivity" >
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"	    
	    android:orientation="vertical">
	    
	    <TextView
	        android:id="@+id/display_name_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/display_name"/>
	    
	    <EditText
	        android:id="@+id/display_name"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
	        android:inputType="textPersonName"/>
	    
	    <TextView
	        android:id="@+id/first_name_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/first_name"/>
	    
	    <EditText
	        android:id="@+id/first_name"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
	        android:inputType="textPersonName"/>
	    
	    <TextView
	        android:id="@+id/last_name_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/last_name"/>
	    
	    <EditText
	        android:id="@+id/last_name"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
	        android:inputType="textPersonName"/>
	    
	    <TextView
	        android:id="@+id/birthday_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/birthday"/>
	    
	    <Button
	        android:id="@+id/birthday"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
	    
	    <TextView
	        android:id="@+id/home_phone_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/home_phone"/>
	    
	    <EditText
	        android:id="@+id/home_phone"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
	        android:inputType="phone"/>
	    
	    <TextView
	        android:id="@+id/work_phone_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/work_phone"/>
	    
	    <EditText
	        android:id="@+id/work_phone"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
	        android:inputType="phone"/>
	    
	    <TextView
	        android:id="@+id/mobile_phone_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/mobile_phone"/>
	    
	    <EditText
	        android:id="@+id/mobile_phone"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
	        android:inputType="phone"/>
	    
	    <TextView
	        android:id="@+id/email_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/e_mail_address"/>
	    
	    <EditText
	        android:id="@+id/email_address"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
	        android:inputType="textEmailAddress"/>

	</LinearLayout>
</ScrollView>